sql/hive/src/test/resources/ql/src/test/queries/positive/groupby2.q
FROM src
SELECT substr(src.key,1,1), count(DISTINCT substr(src.value,5)), concat(substr(src.key,1,1),sum(substr(src.value,5))) GROUP BY substr(src.key,1,1)
